--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ google-auth==2.42.1
 google-auth-httplib2==0.2.1
 google-generativeai==0.8.5
 googleapis-common-protos==1.71.0
+greenlet==3.2.4
 grpcio==1.76.0
 grpcio-status==1.71.2
 h11==0.16.0
@@ -40,6 +41,7 @@ requests==2.32.5
 rsa==4.9.1
 simple-websocket==1.1.0
 soupsieve==2.8
+SQLAlchemy==2.0.44
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
